comment out section editor names

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -71,43 +71,44 @@ The proposed single phase liquid argon detector presently described corresponds 
 \newpage
 
 %\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
-\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
+\section{Introduction}
 	\input{introduction}
 %	\input{../150212_introduction_Greg}
 
 %\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
-\section{Scientific Motivation and Measurement Program [$\sim$10 pages; {\color{red} Donna/Jarek}]}
+\section{Scientific Motivation and Measurement Program} % [$\sim$10 pages; {\color{red} Donna/Jarek}]}
 	\input{detbeamtest}
 	
 
-\section{Single Phase LAr Detector [$\sim$10 pages; {\color{red} J. Stewart et al.}]}
+%\section{Single Phase LAr Detector [$\sim$10 pages; {\color{red} J. Stewart et al.}]}
+\section{Single Phase LAr Detector} 
 %\rm
 
 	\input{singlephasedet}
 
 
-\section{Cryostat and cryogenics system [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
+\section{Cryostat and cryogenics system} % [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
 	\input{cryo.tex}
 	
 \section{Calibration}
 	\input{calibration}
 
 %\newpage
-\section{Charged Particle Test Beam Requirements [$\sim$10 pages; {\color{red} Cheng-Ju}]}
+\section{Charged Particle Test Beam Requirements} % [$\sim$10 pages; {\color{red} Cheng-Ju}]}
 	\input{testbeamreq}
 
 
-\section{Computing requirements, data handling and software  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
+\section{Computing requirements, data handling and software} %  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
 	\input{computing}
 
-\section{CERN neutrino platform test environment [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
+\section{Installation and CERN neutrino platform}  % [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
 	\input{nuplatform}
 	
 	
-\section{Schedule, organization and cost estimate [$\sim$5 pages; {\color{red} Thomas/Greg}]}
+\section{Schedule, organization and cost estimate} % [$\sim$5 pages; {\color{red} Thomas/Greg}]}
 	\input{organ}
 
-\section{Summary [$\sim$2 pages; {\color{red} Thomas/Greg}]}
+\section{Summary}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
 	\input{summary}
 
 
