many edits to text

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -13,6 +13,9 @@
 
 \bibitem{dunecdr} DUNE CDR.
 
+\bibitem{CRubbia }"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
+
+
 \bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
 %\bibitem{ICARUS2} 
 "Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
@@ -27,6 +30,17 @@
 ``Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector'', ICARUS Collaboration, 
 Adv.High Energy Phys., vol. 2013, p. 260820, 2013
 
+\bibitem{miniboonefsi}  A. A. Aguilar-Arevalo, et al.,
+Phys. Rev. D 83, 052007 (2011).
+\bibitem{minervafsi} Charged Pion Production in Interactions on Hydrocarbon 
+at \overline{E}= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
+
+\bibitem{fsirev} see for example review article ``Pion-nucleus Interactions'',
+T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci, 52, 23 (2002).
+
+\bibitem{argoneut_angle}
+"A study of electron recombination using highly ionizing particles in the ArgoNeuT Liquid Argon TPC", R. Acciarri et al, Journal of Instrumentation (JINST), 2013 JINST Vol. 8 P08005.
+
 \bibitem{nn_pid} based on
 ``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
 \bibitem{rd_pid} 
@@ -34,10 +48,14 @@ Adv.High Energy Phys., vol. 2013, p. 260820, 2013
 http://www.ire.pw.edu.pl/~rsulej/NetMaker
 \end{verbatim}
 
+
+
 \bibitem{icarus_eg} ``Experimental search for the LSND anomaly with the ICARUS
 detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
 
 \bibitem{argoneut_eg} "Results from and Status of ArgoNeuT
 and MicroBooNE" by A. Szelc. conference: http://neutrino2014.bu.edu/.
+
+
 
 \end{thebibliography}
