fixed latex error

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -33,7 +33,7 @@ Adv.High Energy Phys., vol. 2013, p. 260820, 2013
 \bibitem{miniboonefsi}  A. A. Aguilar-Arevalo, et al.,
 Phys. Rev. D 83, 052007 (2011).
 \bibitem{minervafsi} Charged Pion Production in Interactions on Hydrocarbon 
-at \overline{E}= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
+at $\overline{E}$= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
 
 \bibitem{fsirev} see for example review article ``Pion-nucleus Interactions'',
 T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci, 52, 23 (2002).
