Some more updates to the text and figures

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -67,10 +67,10 @@ Beam instrumentation provides important information about the characteristics of
 The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particles as well as the first set of position measurements. Without tracking information, the momentum spread of the beam is expected to be at around 5\% based on the acceptance of the dipole magnets. With additional tracking information, we are likely to be able to measure the momentum of the individual particles to close to one percent level. A third beam position detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
 
 \subsubsection{Particle Identification}
-In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles.
+In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. We are aiming to have samples of $\pi$'s and $K$'s with purity better than 95\%. Work is in progress to better define the beamline layout to meet these requirements.
 
 \subsubsection{Muon Beam Halo Counters}
-The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events.
+The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
 
 %\subsection{Beam Window on LAr Cryostat}
 %This section could be absorbed into the cryostat chapter.
@@ -81,7 +81,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 
 \begin{figure}[tbh]
   \centering
-\includegraphics[scale=0.45]{figures/80GeVPion-15cmCuTarget.pdf}
+\includegraphics[scale=0.47]{figures/80GeVPion-15cmCuTarget.jpg}
   \caption{Simulation of 100K 80 GeV $\pi^+$ on 15 cm copper target. The figure on the left is for positively charged and the figure on the right is for negatively charged secondary particles from the target. }
 \label{fig:PionOnCuTarget}
 \end{figure}
